; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/amd/amd/extr_amq_subr.c_amqproc_sync_umnt_1_svc_async.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/amd/amd/extr_amq_subr.c_amqproc_sync_umnt_1_svc_async.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }
%struct.svc_req = type { i32 }

@amqproc_sync_umnt_1_svc_async.rv = internal global %struct.TYPE_4__ zeroinitializer, align 4
@AMQ_UMNT_FORK = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @amqproc_sync_umnt_1_svc_async(i32 %0, %struct.svc_req* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.svc_req*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.svc_req* %1, %struct.svc_req** %4, align 8
  %5 = call i32 @memset(%struct.TYPE_4__* @amqproc_sync_umnt_1_svc_async.rv, i32 0, i32 8)
  %6 = load i32, i32* @AMQ_UMNT_FORK, align 4
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @amqproc_sync_umnt_1_svc_async.rv, i32 0, i32 1), align 4
  %7 = load i32, i32* @errno, align 4
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @amqproc_sync_umnt_1_svc_async.rv, i32 0, i32 0), align 4
  %8 = load i32, i32* %3, align 4
  %9 = load %struct.svc_req*, %struct.svc_req** %4, align 8
  %10 = call i32 @amqproc_umnt_1_svc(i32 %8, %struct.svc_req* %9)
  ret %struct.TYPE_4__* @amqproc_sync_umnt_1_svc_async.rv
}

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @amqproc_umnt_1_svc(i32, %struct.svc_req*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
